@@ -65,6 +65,7 @@ query.runError=Can not run this query!
 query.validateError=Validation error!
 query.saveError=Can not save this query!
 query.ResetError=Can not read the original query!
+query.contractViolation=Wrong query or cluster name. Contract violation.
 
 result.viewError=Can not view this result!
 result.deleteError=Can not delete this result!
